// Copyright 2021 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// tag::declarations[]
syntax = "proto3";

package customer.view;

option java_outer_classname = "CustomerViewModel";

import "customer/domain/customer_domain.proto";
import "akkaserverless/annotations.proto";
// end::declarations[]

// tag::CustomerByEmail[]
service CustomerByEmail {
  option (akkaserverless.service) = {
    type: SERVICE_TYPE_VIEW
  };

  rpc UpdateCustomer(domain.CustomerState) returns (domain.CustomerState) {
    option (akkaserverless.method).eventing.in = {
      value_entity: "customers"
    };
    option (akkaserverless.method).view.update = {
      table: "customers_by_email"
    };
  }

  rpc GetCustomer(ByEmailRequest) returns (domain.CustomerState) {
    option (akkaserverless.method).view.query = {
      query: "SELECT * FROM customers_by_email WHERE email = :email"
    };
  }
}

message ByEmailRequest {
  string email = 1;
}
// end::CustomerByEmail[]

// tag::CustomerByName[]
service CustomerByName {
  option (akkaserverless.service) = {
    type: SERVICE_TYPE_VIEW
  };

  rpc UpdateCustomer(domain.CustomerState) returns (CustomerViewState) {
    option (akkaserverless.method).eventing.in = {
      value_entity: "customers"
    };
    option (akkaserverless.method).view.update = {
      table: "customers_by_name"
      transform_updates: true
    };
  }

  rpc GetCustomers(ByNameRequest) returns (stream CustomerViewState) {
    option (akkaserverless.method).view.query = {
      query: "SELECT * FROM customers_by_name WHERE name = :customer_name"
    };
  }
}

message CustomerViewState {
  string customer_id = 1;
  string email = 2;
  string name = 3;
}

message ByNameRequest {
  string customer_name = 1;
}
// end::CustomerByName[]
